app/assets/stylesheets/components/btn.css.scss
.btn {
  height: 40px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-weight: 500;
  white-space: nowrap;
  transition:
    box-shadow 145ms ease,
    opacity 145ms ease,
    border-color 145ms ease,
    background-color 145ms ease;

  &.with-icon {
    padding-left: 16px;
    padding-right: 24px;

    .mdi {
      padding: 0;
      padding-right: 8px;
    }
  }

  &.with-icon.right {
    padding-left: 24px;
    padding-right: 16px;

    .mdi {
      padding: 0;
      padding-left: 8px;
    }
  }

  &:hover,
  &:focus,
  &:active {
    opacity: 0.9;
    box-shadow: none;
  }

  &:disabled,
  &.disabled {
    opacity: 0.38;
    pointer-events: none;
  }
}

.btn.btn-filled {
  background: $primary;
  color: $on-primary;

  &:hover {
    @include shadow-z2;
  }
}

.btn.btn-tonal,
.btn.btn-elevated {
  background: $secondary-container;
  color: $on-secondary-container;

  &:hover {
    @include shadow-z1;
  }
}

.btn.btn-elevated {
  @include shadow-z1;

  &:hover {
    @include shadow-z2;
  }
}

.btn.btn-text,
.btn.btn-outline {
  background: none;
  color: $primary;

  &:hover,
  &:focus,
  &:active {
    opacity: 1;
    background: rgba($primary, 0.1);
  }
}

// in the future, the "with-icon" class can be replaced by a "has()" selector
.btn.btn-text {
  padding-left: 12px;
  padding-right: 12px;

  &.with-icon {
    padding-left: 12px;
    padding-right: 16px;

    .mdi {
      padding: 0;
      padding-right: 8px;
    }
  }

  &.with-icon.right {
    padding-left: 16px;
    padding-right: 12px;

    .mdi {
      padding: 0;
      padding-left: 8px;
    }
  }
}

.btn.btn-outline {
  border: 1px solid $divider;

  &:hover,
  &:focus,
  &:active {
    border-color: $primary;
  }
}

.btn.btn-icon {
  width: 40px;
  padding: 0;
  color: $on-surface-variant;

  &:not(.btn-icon-filled) {
    &:hover,
    &:focus,
    &:active {
      opacity: 1;
      background: rgba($primary, 0.1);
    }
  }

  &.btn-icon-inverted {
    color: $on-primary;

    &:hover,
    &:focus,
    &:active {
      opacity: 1;
      background: rgba(white, 0.1);
    }
  }

  &.btn-icon-filled {
    color: $on-primary;

    &:hover,
    &:focus,
    &:active {
      opacity: 1;
      filter: brightness(0.95);
    }
  }
}

.btn.btn-fab {
  height: 56px;
  width: 56px;
  border-radius: 16px;
  background: $secondary-container;
  color: $on-secondary-container;

  @include shadow-z2;

  &:hover,
  &:focus,
  &:active,
  &:disabled,
  &.disabled {
    opacity: 1;
    filter: brightness(0.95);

    @include shadow-z3;
  }

  &.correct {
    background-color: $success;
  }

  &.wrong {
    background-color: $danger;
  }
}

.btn-group {
  & > .btn {
    padding-left: 12px;
    padding-right: 12px;
    border: 1px solid $divider;
    border-right: 0;

    &:last-of-type {
      border-right: 1px solid $divider;
    }

    &:hover,
    &:focus,
    &:active {
      background: rgba($primary, 0.1);
    }

    &.active {
      background: rgba($primary, 0.2);
    }
  }
}

.input-group {
  .btn {
    border: 1px solid $outline;
    border-radius: 4px;
  }

  .btn:disabled {
    opacity: 0.8;
  }

  &.input-group-small {
    .btn {
      height: 32px;
    }
  }
}

.option-btn {
  height: 90px;
  display: flex;
  align-items: center;
  margin-bottom: 15px;
  padding: 12px;
  background-color: $surface;
  border-radius: 4px;
  transition: box-shadow 0.1s cubic-bezier(0.4, 0, 0.2, 1);

  @include shadow-z2;

  cursor: pointer;

  .option-btn-img {
    margin-right: 12px;

    img {
      width: 70px;
      height: 70px;
      object-position: 50% 50%;
      object-fit: contain;
    }
  }

  .option-btn-title {
    flex-grow: 1;

    h3 {
      line-height: 1;
    }
  }
}

.option-btn:hover {
  @include shadow-z4;
}

.single-zero-button,
#zero-button {
  background-color: unset;
  color: unset;
  transition: background-color 1s ease-out;
}

.single-max-button,
#max-button {
  background-color: unset;
  color: unset;
  transition: background-color 1s ease-out;
}

.single-zero-button:hover:not(:focus),
#zero-button:hover:not(:focus) {
  color: $danger;
}

.single-max-button:hover:not(:focus),
#max-button:hover:not(:focus) {
  color: $success;
}

.single-zero-button:active,
#zero-button:active {
  background-color: rgba($danger, 0.6);
  color: unset;
  transition: background-color 0s;
}

.single-max-button:active,
#max-button:active {
  background-color: rgba($success, 0.6);
  color: unset;
  transition: background-color 0s;
}

